--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DR Course 157</title>
+  <link rel="shortcut icon" href="./assets/1.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/main.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
   <style>
@@ -19,7 +20,7 @@
   </style>
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
   <!-- navbar -->
   <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container-xxl">
