--- a/index.html
+++ b/index.html
@@ -63,26 +63,25 @@
   <section id="intro">
     <div class="container-lg">
       <div class="row g-4 justify-content-center align-items-center">
-        <div class="col-md-5 text-center text-md-start">
+        <div class="col-md-6 order-md-5">
+          <!-- tooltip -->
+          <span class="tt" data-bs-placement="bottom" title="DR Course 157 - Book">
+            <img src="./assets/ebook-cover.png" class="img-fluid" alt="ebook" />
+          </span>
+        </div>
+        <div class="col-md-5 order-md-0 text-center text-md-start">
           <h1>
-            <div class="display-2">Black-Belt</div>
-            <div class="display-5 text-muted">Your Coding Skills</div>
+            <div class="display-2">Discount 6+1</div>
+            <div style="font-size: 40px!important;" class="display-5 text-muted">Those who read govern those who do not</div>
           </h1>
           <p class="lead my-4 text-muted">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Laboriosam, dignissimos?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, dignissimos?
           </p>
           <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
           <!-- open sidebar / offcanvas -->
           <a href="#sidebar" class="d-block mt-3" data-bs-toggle="offcanvas" role="button" aria-controls="sidebar">
-            Explore my other books
+            Link with href
           </a>
-        </div>
-        <div class="col-md-6 text-center d-md-block">
-          <!-- tooltip -->
-          <span class="tt" data-bs-placement="bottom" title="Net Ninja Pro book cover">
-            <img src="./assets/ebook-cover.png" class="img-fluid" alt="ebook" />
-          </span>
         </div>
       </div>
     </div>
