--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     .hover-color:hover {
       color: #fff !important;
     }
+    .f-size-md {
+      font-size: 40px!important;
+    }
+    @media(max-width: 992px){
+      .f-size-md {
+        font-size: 30px!important;
+      }
+    }
   </style>
 </head>
 
@@ -72,7 +80,7 @@
         <div class="col-md-5 order-md-0 text-center text-md-start">
           <h1>
             <div class="display-2">Discount 6+1</div>
-            <div style="font-size: 40px!important;" class="display-5 text-muted">Those who read govern those who do not</div>
+            <div class="display-5 text-muted f-size-md">Those who read govern those who do not</div>
           </h1>
           <p class="lead my-4 text-muted">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, dignissimos?
