--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
   <link rel="stylesheet" href="./css/main.min.css" />
   <style>
+    body {
+      overflow-x: hidden!important;
+    }
     section {
       padding: 60px 0;
     }
@@ -104,7 +107,7 @@
       </div>
 
       <div class="row my-5 g-0 align-items-center justify-content-center">
-        <div class="col-11 col-lg-4 col-xl-3">
+        <div class="col-10 col-lg-4 col-xl-3">
           <div class="card border-0 my-3">
             <div class="card-body text-center py-4">
               <h4 class="card-title">Starter Edition</h4>
@@ -121,8 +124,8 @@
           </div>
         </div>
 
-        <div class="col-12 col-lg-4">
-          <div class="card border-primary border-2 my-3">
+        <div class="col-10 col-lg-4">
+          <div class="card border-2 border-primary shadow my-3">
             <div class="card-header text-center bg-white text-primary">
               Most Popular
             </div>
@@ -141,7 +144,7 @@
           </div>
         </div>
 
-        <div class="col-11 col-lg-4 col-xl-3 my-3">
+        <div class="col-10 col-lg-4 col-xl-3 my-3">
           <div class="card border-0">
             <div class="card-body text-center py-4">
               <h4 class="card-title">Ultimate Edition</h4>
