--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     body {
       overflow-x: hidden!important;
     }
+    img {
+      width: 100%;
+    }
     section {
       padding: 60px 0;
     }
@@ -174,13 +177,13 @@
           A quick glance at the topics you'll learn
         </p>
       </div>
-      <div class="row my-lg-2 g-5 justify-content-around align-items-center">
-        <div class="col-10 col-lg-6">
+      <div class="row my-4 justify-content-around align-items-center">
+        <div class="col-lg-6">
           <img src="./assets/kindle.png" class="img-fluid" alt="ebook" />
         </div>
         <div class="col-lg-6">
           <!-- accordion -->
-          <div class="accordion" id="chapters">
+          <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="heading-1">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-1"
@@ -295,7 +298,7 @@
         <p class="lead">What my students have said about the book...</p>
       </div>
 
-      <div class="row justify-content-center my-5">
+      <div class="row justify-content-center py-3">
         <div class="col-lg-8">
           <div class="list-group">
             <div class="list-group-item py-3">
